<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hska.streamingblitzv2.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/banner" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <AutoCompleteTextView android:id="@+id/text_login_email" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="70px" />

            <EditText android:id="@+id/text_login_password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:layout_marginTop="40px" />

            <Button android:id="@+id/button_login_signin" style="?android:textAppearanceSmall"
                android:layout_width="400px" android:layout_height="wrap_content"
                android:layout_marginTop="50px" android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:id="@+id/button_login_registrieren"
                android:layout_gravity="center_horizontal"
                android:hint="@string/action_login_register"
                android:layout_marginTop="25px"
                android:textSize="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="300px"
                android:layout_height="wrap_content"
                android:id="@+id/button_login_pwvrg"
                android:layout_gravity="center_horizontal"
                android:hint="@string/action_login_lostpassword"
                android:layout_marginTop="20px"
                android:textSize="10dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
