<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hska.streamingblitz.activities.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/banner" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit_register_username"
        android:hint="@string/prompt_register_username"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/edit_register_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edit_register_email"
        android:layout_marginTop="17dp"
        android:hint="@string/prompt_register_email"
        android:layout_below="@+id/edit_register_username"
        android:layout_alignStart="@+id/edit_register_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_register_password"
        android:layout_marginTop="17dp"
        android:hint="@string/prompt_register_password"
        android:layout_below="@+id/edit_register_email"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Registrierung"
        android:id="@+id/textView"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_register_anlegen"
        android:hint="@string/action_register_anlegen"
        android:layout_below="@+id/edit_register_password"
        android:layout_alignStart="@+id/button_register_loeschen" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_register_loeschen"
        android:hint="@string/action_register_loeschen"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView" />

</RelativeLayout>
